--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/redux": "^3.6.0",
     "history": "^4.7.2",
     "lodash-es": "^4.17.4",
+    "moize": "^4.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
