--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "React with the Elm Architecture",
-  "repository": "github.com/bjoyx/reactive-elm",
+  "repository": "github.com/ben-x9/reactive-elm",
   "author": "Ben Lambert",
   "license": "MIT",
   "keywords": [
