--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,13 +33,7 @@
       "es2016",
       "es2017.object"
     ],
-    "baseUrl": ".",
-    "paths": {
-      "*": [
-        "src/*",
-        "*"
-      ]
-    }
+    "baseUrl": "."
   },
   "include": [
     "src/**/*"
