--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactive-elm",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "React with the Elm Architecture",
@@ -27,6 +27,7 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "history": "^4.7.2",
     "lodash-es": "^4.17.4",
     "moize": "^4.0.4",
