--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "type-zoo": "^1.2.1"
-  },
-  "devDependencies": {
+    "type-zoo": "^1.2.1",
     "@types/history": "^4.6.2",
     "@types/lodash-es": "^4.14.88",
     "@types/node": "^8.0.54",
@@ -38,7 +36,9 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
-    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-devtools-extension": "^2.13.2"
+  },
+  "devDependencies": {
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
     "typescript": "^2.6.2"
