--- a/package.json
+++ b/package.json
@@ -19,15 +19,6 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "history": "^4.7.2",
-    "lodash-es": "^4.17.4",
-    "moize": "^4.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "type-zoo": "^1.2.1",
     "@types/history": "^4.6.2",
     "@types/lodash-es": "^4.14.88",
     "@types/node": "^8.0.54",
@@ -36,7 +27,16 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
-    "@types/redux-devtools-extension": "^2.13.2"
+    "@types/redux-devtools-extension": "^2.13.2",
+    "history": "^4.7.2",
+    "lodash-es": "^4.17.4",
+    "moize": "^4.0.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "type-zoo": "^1.2.1"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
