--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactive-elm",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "React with the Elm Architecture",
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@types/history": "^4.6.2",
-    "@types/lodash-es": "^4.14.88",
+    "@types/lodash": "^4.14.104",
     "@types/node": "^8.0.54",
     "@types/react": "^16.0.27",
     "@types/react-dom": "^16.0.3",
@@ -30,7 +30,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "history": "^4.7.2",
-    "lodash-es": "^4.17.4",
+    "lodash": "^4.17.5",
     "moize": "^4.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
