--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ben-x9/react-toolkit",
-  "version": "0.9.0",
+  "name": "react-all-in-one",
+  "version": "0.9.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "description": "A toolkit for React",
-  "repository": "github.com/ben-x9/react-toolkit",
+  "description": "An all-in-one toolkit for building React apps",
+  "repository": "github.com/ben-x9/react-all-in-one",
   "author": "Ben Lambert",
   "license": "MIT",
   "keywords": [
