--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tooling",
-  "version": "0.10.0",
+  "version": "0.10.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
@@ -33,13 +33,14 @@
     "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moize": "^4.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "remote-redux-devtools": "^0.5.12",
-    "type-zoo": "^1.2.1"
+    "type-zoo": "^1.2.1",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
