--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-tooling",
-  "version": "0.12.3",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "author": "Ben Lambert",
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
   "keywords": [
     "react",
@@ -31,20 +34,21 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/remote-redux-devtools": "^0.5.2",
+    "functools-ts": "^0.0.11",
     "history": "^4.7.2",
-    "lodash": "^4.17.5",
     "moize": "^4.0.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "remote-redux-devtools": "^0.5.12",
+    "remote-redux-devtools": "^0.5.13",
+    "rxjs": "^6.3.2",
     "type-zoo": "^1.2.1"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.8.4"
+    "typescript": "^2.8.3"
   }
 }
