--- a/package.json
+++ b/package.json
@@ -24,16 +24,6 @@
     "compile": "tsc"
   },
   "dependencies": {
-    "@types/history": "^4.6.2",
-    "@types/lodash": "^4.14.106",
-    "@types/node": "^8.0.54",
-    "@types/react": "^16.0.27",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-hot-loader": "^3.0.5",
-    "@types/react-redux": "^5.0.14",
-    "@types/redux": "^3.6.0",
-    "@types/redux-devtools-extension": "^2.13.2",
-    "@types/remote-redux-devtools": "^0.5.2",
     "functools-ts": "^0.0.11",
     "history": "^4.7.2",
     "moize": "^4.0.4",
@@ -49,6 +39,15 @@
   "devDependencies": {
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "@types/history": "^4.6.2",
+    "@types/node": "^8.0.54",
+    "@types/react": "^16.0.27",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-hot-loader": "^3.0.5",
+    "@types/react-redux": "^5.0.14",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/remote-redux-devtools": "^0.5.2"
   }
 }
