--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-tooling",
-  "version": "0.12.3",
+  "version": "0.20.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "author": "Ben Lambert",
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
   "keywords": [
     "react",
@@ -21,8 +24,23 @@
     "compile": "tsc"
   },
   "dependencies": {
+    "functools-ts": "^0.0.11",
+    "history": "^4.7.2",
+    "moize": "^4.0.4",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "remote-redux-devtools": "^0.5.13",
+    "rxjs": "^6.3.2",
+    "type-zoo": "^1.2.1"
+  },
+  "devDependencies": {
+    "tslint": "^5.8.0",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.8.3",
     "@types/history": "^4.6.2",
-    "@types/lodash": "^4.14.106",
     "@types/node": "^8.0.54",
     "@types/react": "^16.0.27",
     "@types/react-dom": "^16.0.3",
@@ -30,21 +48,6 @@
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
-    "@types/remote-redux-devtools": "^0.5.2",
-    "history": "^4.7.2",
-    "lodash": "^4.17.5",
-    "moize": "^4.0.4",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "remote-redux-devtools": "^0.5.12",
-    "type-zoo": "^1.2.1"
-  },
-  "devDependencies": {
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.8.4"
+    "@types/remote-redux-devtools": "^0.5.2"
   }
 }
