--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
-    "check": "tsc",
-    "compile": "tsc"
+    "compile": "tsc",
+    "format": "prettier --write \"**/*.{ts*(x),js*(on),scss}\"",
+    "check:format": "prettier -l \"**/*.{ts*(x),js*(on),scss}\"",
+    "check": "npm run compile && npm run check:format"
   },
   "dependencies": {
     "functools-ts": "^0.0.11",
@@ -35,9 +37,6 @@
     "rxjs": "^6.3.2"
   },
   "devDependencies": {
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^3.0.3",
     "@types/history": "^4.6.2",
     "@types/node": "^8.0.54",
     "@types/react": "^16.4.18",
@@ -46,6 +45,10 @@
     "@types/react-redux": "^6.0.7",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
-    "@types/remote-redux-devtools": "^0.5.2"
+    "@types/remote-redux-devtools": "^0.5.2",
+    "prettier": "^1.14.3",
+    "tslint": "^5.8.0",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^3.0.3"
   }
 }
