--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,19 +28,11 @@
     "jsx": "react",
     "sourceMap": true,
     "target": "es5",
-    "lib": [
-      "dom",
-      "es2016",
-      "es2017.object"
-    ],
+    "lib": ["dom", "es2016", "es2017.object"],
     "baseUrl": "."
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules/**/*"
-  ],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**/*"],
   "types": [
     "history",
     "lodash",
