--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "react-tooling",
-  "version": "0.24.2",
+  "version": "0.24.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "authors": ["Ben Lambert", "Jalal Chaabane"],
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
-  "keywords": ["react", "reactjs", "redux", "typescript", "elm-architecture"],
+  "keywords": [
+    "react",
+    "reactjs",
+    "redux",
+    "typescript",
+    "elm-architecture"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
@@ -17,17 +26,29 @@
     "check": "npm run compile && npm run check:format"
   },
   "dependencies": {
-    "functools-ts": "^0.0.11",
-    "history": "^4.7.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "remote-redux-devtools": "^0.5.13",
-    "rxjs": "^6.3.2"
+    "history": "^4.7.2"
+  },
+  "peerDependencies": {
+    "functools-ts": "0.0.15",
+    "history": "4.7.2",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-hot-loader": "3.1.3",
+    "react-redux": "5.0.7",
+    "redux": "3.7.2",
+    "remote-redux-devtools": "0.5.13",
+    "rxjs": "6.3.2"
   },
   "devDependencies": {
+    "functools-ts": "0.0.15",
+    "history": "4.7.2",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-hot-loader": "3.1.3",
+    "react-redux": "5.0.7",
+    "redux": "3.7.2",
+    "remote-redux-devtools": "0.5.13",
+    "rxjs": "6.3.2",
     "@types/history": "^4.6.2",
     "@types/node": "^8.0.54",
     "@types/react": "^16.4.18",
