--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "react-tooling",
-  "version": "0.24.2",
+  "version": "0.25.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "authors": ["Ben Lambert", "Jalal Chaabane"],
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
-  "keywords": ["react", "reactjs", "redux", "typescript", "elm-architecture"],
+  "keywords": [
+    "react",
+    "reactjs",
+    "redux",
+    "typescript",
+    "elm-architecture"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
@@ -17,15 +26,14 @@
     "check": "npm run compile && npm run check:format"
   },
   "dependencies": {
-    "functools-ts": "^0.0.11",
+    "functools-ts": "^0.0.15",
     "history": "^4.7.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "react": "^16.6.1",
+    "react-hot-loader": "^4.3.12",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
     "remote-redux-devtools": "^0.5.13",
-    "rxjs": "^6.3.2"
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
