Fallback to memory history
detect environment and switch to in memory history if application is not running on browser

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tooling",
-  "version": "0.25.1",
+  "version": "0.25.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
@@ -13,9 +13,7 @@
   "keywords": [
     "react",
     "reactjs",
-    "redux",
-    "typescript",
-    "elm-architecture"
+    "typescript"
   ],
   "scripts": {
     "build": "rm -rf dist && tsc",
@@ -26,8 +24,8 @@
     "check": "npm run compile && npm run check:format"
   },
   "dependencies": {
-    "functools-ts": "^0.0.15",
     "history": "^4.7.2",
+    "functools-ts": "^0.0.15",
     "react": "^16.6.1",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^5.1.0",
