--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "react-tooling",
-  "version": "0.26.1",
+  "version": "0.26.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "authors": ["Ben Lambert", "Jalal Chaabane"],
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
-  "keywords": ["react", "reactjs", "typescript"],
+  "keywords": [
+    "react",
+    "reactjs",
+    "typescript"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
@@ -18,19 +25,19 @@
   },
   "dependencies": {
     "history": "^4.7.2",
-    "functools-ts": "^0.0.15",
-    "react": "^16.6.1",
-    "react-hot-loader": "^4.3.12",
-    "react-redux": "^5.1.0",
+    "functools-ts": "^0.0.21",
+    "react": "^16.8.1",
+    "react-hot-loader": "^4.6.5",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "remote-redux-devtools": "^0.5.13",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.4.0"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
     "@types/node": "^8.0.54",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-redux": "^6.0.7",
     "@types/redux": "^3.6.0",
