--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "react-tooling",
-  "version": "0.26.6",
+  "version": "0.27.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
-  "authors": ["Ben Lambert", "Jalal Chaabane"],
+  "authors": [
+    "Ben Lambert",
+    "Jalal Chaabane"
+  ],
   "license": "MIT",
-  "keywords": ["react", "reactjs", "typescript"],
+  "keywords": [
+    "react",
+    "reactjs",
+    "typescript"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "prepare": "npm run build",
@@ -17,11 +24,14 @@
     "check": "npm run compile && npm run check:format"
   },
   "dependencies": {
-    "functools-ts": "^0.0.21",
-    "history": "^4.7.2",
+    "functools-ts": "^0.1.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
-    "react-hot-loader": "^4.6.5",
+    "react-hot-loader": "^4.8.7",
     "react-redux": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "hydra-dispatch": "^0.1.0",
+    "hydra-dispatch-redux": "^0.1.0",
     "redux": "^4.0.1",
     "remote-redux-devtools": "^0.5.16",
     "rxjs": "^6.4.0"
