--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
   "dependencies": {
     "functools-ts": "^0.2.0",
     "history": "^4.9.0",
-    "react": "^16.10.2",
     "react-redux": "^7.0.3",
     "redux-thunk": "^2.3.0",
     "hydra-dispatch": "^0.2.8",
     "hydra-dispatch-redux": "^0.2.8",
     "redux": "^4.0.4",
     "remote-redux-devtools": "^0.5.16"
+  },
+  "peerDependencies": {
+    "react": ">=16.9.0"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
