--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -19,10 +19,10 @@
     "emitDecoratorMetadata": true,
     "pretty": true,
     "declaration": true,
-    "module": "es6",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "noResolve": false,
-    "outDir": "./dist/esm",
+    "outDir": "./dist/cjs",
     "newLine": "LF",
     "removeComments": true,
     "jsx": "react",
