--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "react-tooling",
   "version": "0.30.1",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "description": "Tooling for React",
   "repository": "github.com/ben-x9/react-tooling",
+  "engines": {
+    "node": "16.x.x"
+  },
+  "engineStrict": true,
   "authors": [
     "Ben Lambert",
     "Jalal Chaabane"
@@ -16,8 +21,7 @@
     "typescript"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc",
-    "prepare": "npm run build",
+    "build": "rm -rf dist && tsc && tsc -p tsconfig-cjs.json",
     "compile": "tsc",
     "format": "prettier --write '**/*.{ts*(x),js*(on),scss}' '!dist/**'",
     "check:format": "prettier -l '**/*.{ts*(x),js*(on),scss}' '!dist/**'",
@@ -25,26 +29,26 @@
   },
   "dependencies": {
     "functools-ts": "^0.2.0",
-    "history": "^4.9.0",
-    "react": "^16.10.2",
-    "react-redux": "^7.0.3",
-    "redux-thunk": "^2.3.0",
-    "hydra-dispatch": "^0.2.8",
-    "hydra-dispatch-redux": "^0.2.8",
-    "redux": "^4.0.4",
-    "remote-redux-devtools": "^0.5.16"
+    "history": "5.2.0",
+    "react": "17.0.2",
+    "react-redux": "7.2.6",
+    "redux-thunk": "2.4.1",
+    "hydra-dispatch": "0.2.14",
+    "hydra-dispatch-redux": "0.2.14",
+    "redux": "4.1.2",
+    "remote-redux-devtools": "0.5.16"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
-    "@types/node": "^8.0.54",
-    "@types/react": "^16.9.9",
-    "@types/react-redux": "^7.1.5",
-    "@types/redux": "^3.6.0",
-    "@types/redux-devtools-extension": "^2.13.2",
-    "@types/remote-redux-devtools": "^0.5.2",
-    "prettier": "^1.18.2",
-    "tslint": "^5.20.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^3.6.4"
+    "@types/node": "^16.0.0",
+    "@types/react": "17.0.39",
+    "@types/react-redux": "7.1.22",
+    "@types/redux": "3.6.0",
+    "@types/redux-devtools-extension": "2.13.2",
+    "@types/remote-redux-devtools": "0.5.5",
+    "prettier": "2.5.1",
+    "tslint": "6.1.3",
+    "tslint-eslint-rules": "5.4.0",
+    "typescript": "^4.5.5"
   }
 }
